--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cfjedimaster/document-services-exercises#readme",
   "dependencies": {
     "@adobe/pdfservices-node-sdk": "^2.2.3",
-    "adm-zip": "^0.5.9"
+    "adm-zip": "^0.5.9",
+    "uuid": "^8.3.2"
   }
 }
